kubernetes/base/002-chatbot-interface-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-interface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-interface
  template:
    metadata:
      labels:
        app: chatbot-interface
        istioRequireAuthentication: "true"
    spec:
      serviceAccountName: focusing-manager-serviceaccount
      containers:
      - name: chatbot-interface
        image: gravitate-registry.cr.de-fra.ionos.com/chatbot-interface:v0.1.0
        imagePullPolicy: Always
        resources: {}
      restartPolicy: Always
status: {}
