kubernetes/base/001-chatbot-interface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-interface
  labels:
    name: chatbot-interface
spec:
  selector:
    app: chatbot-interface
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
